Merged changes from upstream repository.